--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -37,3 +37,10 @@ jobs:
       - name: Run a multi-line script
         run: |
           ls -al
+  container-test-job:
+    runs-on: ubuntu-latest
+    container:
+      image: jonathann1203/ipv64_client_dockercontainer:v1
+    steps:
+      - name: Check for dockerenv file
+        run: ls -al
