--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -5,7 +5,7 @@ name: CI
 # Controls when the workflow will run
 on:
   schedule:
-  - cron: "*/5 * * * *"
+  - cron: "0 8 * * *"
   
   push:
     branches: [ "main" ]
