--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -18,6 +18,7 @@ on:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   container-test-job:
+    if: github.repository == 'JonathanN1203/test'
     runs-on: ubuntu-latest
     container:
       image: jonathann1203/ipv64_client_dockercontainer:v1
@@ -26,7 +27,7 @@ jobs:
       - name: "check is MY_SECRET exists"
         env: 
             DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN2  }}
-        if: ${{ env.DOCKERHUB_TOKEN == '' }}
+        if: ${{ env.DOCKERHUB_TOKEN != '' }}
         run: 'echo "echo the secret \"MY_SECRET\" has not been made; echo please go to \"settings \> secrets \> actions\" to create it"'
       - name: Check pip version
         run: pip3 --version
