--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -30,4 +30,4 @@ jobs:
         if: ${{ env.DOCKERHUB_TOKEN != '' }}
         run: 'echo "echo the secret \"MY_SECRET\" has not been made; echo please go to \"settings \> secrets \> actions\" to create it"'
       - name: Check pip version
-        run: pip3 --version
+        run: echo ${{ github.ref }}
