--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -31,3 +31,18 @@ jobs:
         run: 'echo "echo the secret \"MY_SECRET\" has not been made; echo please go to \"settings \> secrets \> actions\" to create it"'
       - name: Check pip version
         run: echo ${{ github.ref }}
+
+  container-test-job-dev:
+    if: ${{ github.ref == 'ref/heads/dev' }} && ${{ github.repository == 'JonathanN1203/test' }}
+    runs-on: ubuntu-latest
+    container:
+      image: jonathann1203/ipv64_client_dockercontainer:v1
+    steps:
+
+      - name: "check is MY_SECRET exists"
+        env: 
+            DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN2  }}
+        if: ${{ env.DOCKERHUB_TOKEN != '' }}
+        run: 'echo "echo the secret \"MY_SECRET\" has not been made; echo please go to \"settings \> secrets \> actions\" to create it"'
+      - name: Check pip version
+        run: echo ${{ github.ref }}
