--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -18,7 +18,7 @@ on:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   container-test-job:
-    if: ${{ github.ref == 'ref/heads/main' }} && ${{ github.repository == 'JonathanN1203/test' }}
+    if: ${{ github.ref == 'refs/heads/main' }} && ${{ github.repository == 'JonathanN1203/test' }}
     runs-on: ubuntu-latest
     container:
       image: jonathann1203/ipv64_client_dockercontainer:v1
@@ -33,7 +33,7 @@ jobs:
         run: echo ${{ github.ref }}
 
   container-test-job-dev:
-    if: ${{ github.ref == 'ref/heads/dev' }} && ${{ github.repository == 'JonathanN1203/test' }}
+    if: ${{ github.ref == 'refs/heads/dev' }} && ${{ github.repository == 'JonathanN1203/test' }}
     runs-on: ubuntu-latest
     container:
       image: jonathann1203/ipv64_client_dockercontainer:v1
