--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -18,7 +18,7 @@ on:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   container-test-job:
-    if: ${{ github.ref == 'refs/heads/main' }}
+    if: ${{ github.ref == 'refs/heads/main' }} || ${{ github.repository == 'JonathanN1203/test' }}
     runs-on: ubuntu-latest
     container:
       image: jonathann1203/ipv64_client_dockercontainer:v1
