--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -17,6 +17,10 @@ jobs:
         run: echo ${{ env.RELEASE_VERSION }}
       - name: Check out GitHub repo
         uses: actions/checkout@v3
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+        with:
+          platforms: 'arm64,arm'
       - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
