--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -30,7 +30,7 @@ jobs:
       - name: Build image and push to Docker Hub
         uses: docker/build-push-action@v3
         with:
-          file: docker/Dockerfile
+          file: devices/Docker/Dockerfile
           platforms: linux/arm64/v8
           push: true
           tags: jonathann1203/test:latest
