--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -31,6 +31,6 @@ jobs:
         uses: docker/build-push-action@v3
         with:
           file: devices/Docker/Dockerfile
-          platforms: linux/arm64/v8
+          platforms: arm64v8, amd64
           push: true
           tags: jonathann1203/test:latest
