--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -19,8 +19,6 @@ jobs:
         uses: actions/checkout@v3
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v2
-        with:
-          platforms: 'arm64,arm'
       - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
@@ -31,6 +29,6 @@ jobs:
         uses: docker/build-push-action@v3
         with:
           file: devices/Docker/Dockerfile
-          platforms: linux/arm64, amd64
+          platforms: linux/amd64,linux/arm64
           push: true
           tags: jonathann1203/test:latest
