--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -8,26 +8,29 @@ on:
 
 
 jobs:
-  Build_Dockercontainer:
+  docker:
     runs-on: ubuntu-latest
     steps:
-      - name: Set env
-        run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
-      - name: Test environment variable
-        run: echo ${{ env.RELEASE_VERSION }}
-      - name: Check out GitHub repo
+      -
+        name: Checkout
         uses: actions/checkout@v3
-      - name: Set up QEMU
+      -
+        name: Set up QEMU
         uses: docker/setup-qemu-action@v2
-      - name: Login to Docker Hub
+      -
+        name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+      -
+        name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-
-      - name: Build image and push to Docker Hub
+      -
+        name: Build and push
         uses: docker/build-push-action@v4
         with:
+          context: .
           file: devices/Docker/Dockerfile
           platforms: linux/amd64,linux/arm64
           push: true
